# OpenEnv-Hackathon

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN_95_PLUS.md  README.md  client.py  inference.py  memory-management-agent-execution-plan.md  memory-management-agent.md  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  run_llm_agent.py  server.py
.beads/: metadata.json
experiments/: 001-rule-based.json  002-llm-based.txt  003-llm-based.txt  004-llm-based.txt
server/: app.py
src/memory_management_agent/: __init__.py  agents.py  analysis.py  environment.py  episode.py  evaluation.py  grader.py  logging_utils.py  memory_store.py  review.py  schemas.py  tasks.py  training.py  utils.py
tests/: test_core.py
