[project]
name = "memory-management-rl-openenv"
version = "1.0.0"
description = "OpenEnv benchmark for reinforcement learning memory management policies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0",
  "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
