[project]
name = "memory-management-rl-openenv"
version = "1.0.0"
description = "OpenEnv benchmark for reinforcement learning memory management policies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "openenv-core>=0.2.0",
  "pydantic>=2.0",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memory_management_agent", "server"]
package-dir = {"memory_management_agent" = "src/memory_management_agent", "server" = "server"}
